--- a/src/app/tienda/listado-productos/listado-productos.component.html
+++ b/src/app/tienda/listado-productos/listado-productos.component.html
@@ -6,13 +6,10 @@
 <body>
 
 </body>
-</html><section>
-    <div class="album py-5 bg-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+</html>
+
+<section>
+
         <div class="container">
             <div class="row">
                 <div class="col-3">
@@ -92,10 +89,15 @@
                 </div>
                 <!--Fin de acordion-->
                 <!--Deberia hacer un  flex-wrap:wrap-->
+                <!--Cuantas veces quiero llamar a item de producto?-->
                 <div class="col-9">
-                    <app-producto *ngFor="let itemProducto of resultados" [producto]="itemProducto"></app-producto>
+                    <div class= "row">
+                        <div class="col-4" *ngFor="let itemProducto of resultados" >
+                                <app-producto [producto]="itemProducto"></app-producto>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </div>
-    </div>
 </section>
