--- a/src/app/tienda/listado-productos/producto/producto.component.html
+++ b/src/app/tienda/listado-productos/producto/producto.component.html
@@ -1,13 +1,8 @@
 
 <div class="card shadow-sm">
-        <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-            xmlns="http://www.w3.org/2000/svg" role="img"
-            aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
-            focusable="false">
-            <title>Placeholder</title>
-            <rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%"
-                fill="#eceeef" dy=".3em">Thumbnail</text>
-        </svg>
+
+        <img src="https://i.pinimg.com/originals/84/d5/33/84d533bdfea8ba2cd0af427e236eca90.jpg" width="100%"
+                    alt="Moda para mujeres">
 
         <div class="card-body">
             <h2 class="fs-1">{{producto?.nombreProducto}}</h2>
@@ -17,7 +12,7 @@
             <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                     <button type="button"
-                    class="btn btn-sm btn-outline-secondary" click= "respuestaAlClick()">Agregar carrito</button>
+                    class="btn btn-sm btn-outline-secondary" (click)= "respuestaAlClick()">Agregar carrito</button>
                 </div>
 
             </div>
