--- a/src/app/generales/header/header.component.html
+++ b/src/app/generales/header/header.component.html
@@ -24,11 +24,9 @@
                                 <a class="nav-link ">Disabled</a>
                             </li>
                         </ul>
-
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Buscar">
-                            <button class="btn btn-search" type="submit" style="color: white;">Buscar</button>
-                        </form>
+                      <!--Formulario del Buscador-->
+                      <app-busqueda></app-busqueda>
+                      <!--Fin del Buscador-->
 
                     </div>
 
