--- a/src/app/tienda/listado-productos/listado-productos.component.html
+++ b/src/app/tienda/listado-productos/listado-productos.component.html
@@ -1,103 +1,143 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
-
-</body>
-</html>
-
 <section>
-
-        <div class="container">
-            <div class="row">
-                <div class="col-3">
-                    <h2 >Categorias</h2>
-                    <div class="accordion" id="accordionExample">
-                        <div class="accordion-item border-0 border-bottom">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Mujeres
-                                </button>
-                            </h2>
-                            <div id="collapseOne" class="accordion-collapse collapse show"
-                                aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <strong>This is the first item's accordion body.</strong> It is shown by
-                                    default,
-                                    until the collapse plugin adds the appropriate classes that we use to style each
-                                    element.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item border-0 border-bottom">
-                            <h2 class="accordion-header" id="headingTwo">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    Hombres
-                                </button>
-                            </h2>
-                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                                data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <strong>This is the second item's accordion body.</strong> It is hidden by
-                                    default,
-                                    until the collapse plugin adds the appropriate classes that we use to style each
-                                    element.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item border-0 border-bottom">
-                            <h2 class="accordion-header" id="headingThree">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseThree" aria-expanded="false"
-                                    aria-controls="collapseThree">
-                                    Niños
-                                </button>
-                            </h2>
-                            <div id="collapseThree" class="accordion-collapse collapse"
-                                aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <strong>This is the third item's accordion body.</strong> It is hidden by
-                                    default,
-                                    until the collapse plugin adds the appropriate classes that we use to style each
-                                    element.
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="accordion-item border-0 border-bottom">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Accesorioss
-                                </button>
-                            </h2>
-                            <div id="collapseOne" class="accordion-collapse collapse show"
-                                aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    <strong>This is the first item's accordion body.</strong> It is shown by
-                                    default,
-                                    until the collapse plugin adds the appropriate classes that we use to style each
-                                    element.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--Fin de acordion-->
-                <!--Deberia hacer un  flex-wrap:wrap-->
-                <!--Cuantas veces quiero llamar a item de producto?-->
-                <div class="col-9">
-                    <div class= "row">
-                        <div class="col-4" *ngFor="let itemProducto of resultados" >
-                                <app-producto [producto]="itemProducto"></app-producto>
-                        </div>
-                    </div>
-                    
-                </div>
+  <div class="container py-5">
+    <div class="row">
+      <div class="col-3">
+        <h2 class="fw-bold mb-3">Categorias</h2>
+        <div class="accordion" id="accordionExample">
+          <div class="accordion-item border-0 border-bottom">
+            <h2 class="accordion-header" id="headingOne">
+              <button
+                class="accordion-button"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseOne"
+                aria-expanded="true"
+                aria-controls="collapseOne"
+              >
+                Mujeres
+              </button>
+            </h2>
+            <div
+              id="collapseOne"
+              class="accordion-collapse collapse show"
+              aria-labelledby="headingOne"
+              data-bs-parent="#accordionExample"
+            >
+              <div class="accordion-body">
+                <ul>
+                  <li class="m-3">Remeras</li>
+                  <li class="m-3">Pantalones</li>
+                  <li class="m-3">Short</li>
+                  <li class="m-3">Bolso</li>
+                </ul>
+              </div>
             </div>
+          </div>
+          <div class="accordion-item border-0 border-bottom">
+            <h2 class="accordion-header" id="headingTwo">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseTwo"
+                aria-expanded="false"
+                aria-controls="collapseTwo"
+              >
+                Hombres
+              </button>
+            </h2>
+            <div
+              id="collapseTwo"
+              class="accordion-collapse collapse"
+              aria-labelledby="headingTwo"
+              data-bs-parent="#accordionExample"
+            >
+              <div class="accordion-body">
+                <ul>
+                  <li class="m-3">Remeras</li>
+                  <li class="m-3">Pantalones</li>
+                  <li class="m-3">Short</li>
+                  <li class="m-3">Bolso</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item border-0 border-bottom">
+            <h2 class="accordion-header" id="headingThree">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseThree"
+                aria-expanded="false"
+                aria-controls="collapseThree"
+              >
+                Niños
+              </button>
+            </h2>
+            <div
+              id="collapseThree"
+              class="accordion-collapse collapse"
+              aria-labelledby="headingThree"
+              data-bs-parent="#accordionExample"
+            >
+              <div class="accordion-body">
+                <ul>
+                  <li class="m-3">Remeras</li>
+                  <li class="m-3">Pantalones</li>
+                  <li class="m-3">Short</li>
+                  <li class="m-3">Bolso</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="accordion-item border-0 border-bottom">
+            <h2 class="accordion-header" id="headingOne">
+              <button
+                class="accordion-button"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#collapseOne"
+                aria-expanded="true"
+                aria-controls="collapseOne"
+              >
+                Accesorioss
+              </button>
+            </h2>
+            <div
+              id="collapseOne"
+              class="accordion-collapse collapse show"
+              aria-labelledby="headingOne"
+              data-bs-parent="#accordionExample"
+            >
+              <div class="accordion-body">
+                <ul>
+                  <li class="m-3">Gorro</li>
+                  <li class="m-3">Bolso</li>
+                  <li class="m-3">Guantes</li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
+      <!--Fin de acordion-->
+      <!--Deberia hacer un  flex-wrap:wrap-->
+      <!--Cuantas veces quiero llamar a item de producto?-->
+      <div class="col-9">
+        <div class="row">
+          <div
+            class="col-4"
+            *ngFor="
+              let itemProducto of productosResultados._embedded
+                .personalizacionConcretas
+            "
+          >
+            <app-producto [producto]="itemProducto"></app-producto>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
